# cleri-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: combine_corpora.py  download_corpus.py  download_wikipedia_es.py  inspect_tokenizer.py
src/cleriai/: tokenizer.py
tests/: test_setup.py  test_tokenizer.py
